# delta

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  env.d.ts  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
project.inlang/: settings.json
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: utils.ts
src/lib/global/: inject.ts
src/routes/: +layout.svelte
